# rh_flow

./: .gitignore  .teste.csv  ]  pyproject.toml  teste.csv
data/: config.json  utils.json
data/ahgora/: .gitignore  employees.csv
data/fiorilli/: .gitignore  employees.txt
data/to_do/: .gitignore  dismissed_employees.csv  new_employees.csv
rich_examples/: 00_rich_examples.py  01_basic_colors.py  02_emojis_markdown.py  03_syntax_highlight.py  04_tables.py  05_progress_bar.py  06a_live_updates_console_print.py  06b_live_updates_text_object.py  07_logging.py  08_tree.py  09_layout.py  10_spinner.py  11_movies.py  12_lite_sim.py  13_prompt.py
src/: action_handler.py  ahgora_app.py  data_analyzer.py  data_manager.py  exporter.py  file_downloader.py  fiorilli_app.py  processor.py  rh_flow.py  synchronizer.py  tree.txt  updater.py
src/data/: .gitignore
src/rh_flow/: __init__.py  action.py  action_handler.py  ahgora_app.py  ahgora_browser.py  base_browser.py  config.py  core_browser.py  data_manager.py  file_downloader.py  file_manager.py  fiorilli_browser.py  main.py  new_data_manager_tests.py  remove.py  rh_flow.py  task.py  task_manager.py  utils.py
src/rh_flow/browsers/: ahgora_browser.py  browser_factory.py  core_browser.py  fiorilli_browser.py
src/rh_flow/managers/: data_manager.py  download_manager.py  file_manager.py  task_manager.py
src/rh_flow/models/: employee_absence.py  key.py  task.py
src/rh_flow/tasks/: add_absences_task.py  add_employees_task.py  change_positions_task.py  download_task.py  remove_employees_task.py  (+5 more)
src/tests/: test_utils.py
(+4 files in other folders)
